fix: fix trouble with height, overflow in firefox

--- a/src/containers/MainPage/MainPage.css
+++ b/src/containers/MainPage/MainPage.css
@@ -12,7 +12,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100%;
+  height: 90%;
   width: 100vw;
   background-color: #00e99d;
 }
@@ -52,8 +52,11 @@
   overflow-y: auto;
   overflow-x: hidden;
   display: flex;
-
   flex-direction: column-reverse;
+}
+
+.input_message {
+  min-height: 0;
 }
 
 .button,
